2010-04-10  Steffen Kamper  <info@sk-typo3.de>

	* Added feature #13949: Hookrequest - alt_doc::makeEditForm() to enable further access-restrictions (thanks to Tolleiv Nietsch)
	* Added feature #13948: Hookrequest - tslib_fe pre/post process for settingLanguage() (thanks to Tolleiv Nietsch)
	* Added feature #13947: Hookrequest - tslib_menu should provide hook for further filtering (thanks to Tolleiv Nietsch)
	* Added feature #13952: Hookrequest - t3lib_page::getPageOverlay (thanks to Tolleiv Nietsch)
	* Added feature #485: Hookrequest for ~ TemplaVoila unlink doesn't work for Non-Admins (thanks to Tolleiv Nietsch)

2010-04-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #14051: htmlArea RTE: Streamline the RTE loading process
	* Added feature #14057: htmlArea RTE: Extjize the RTE ajax requests.

2010-04-09  Michael Stucki  <michael@typo3.org>

	* Fixed bug #13959: Core autoloader should accept class names only (could lead to remote command execution). Thanks to Helmut Hummel and Marcus Krause for providing a fix.

2010-04-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #14035: htmlArea RTE: Use sprite for toolbar icons
	* Follow-up to feature #14035: htmlArea RTE: Use sprite for toolbar icons
	* Updated htmlArea RTE version to 1.9.2

2010-04-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13828: Login cause JS error if not in frame (access to parent is not allowed)
	* Added feature #12818: Feature: border class is hardcoded  [css styled content] (thanks to Susanne Moog)
	* Fixed bug #13693: Backend doesn't use pageRenderer methods

2010-04-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13956: htmlArea RTE: Editing area is collapsed when the RTE is loaded inside a hidden tab in Safari

2010-04-06  Francois Suter  <francois@typo3.org>

	* Added feature #11316: Add a "No Frame" option [css styled content] (thanks to Susanne Moog)
	* Added feature #13296: Scheduler: Add option to disable the sample tasks
